    (#432100, Jelmer Vernooij)

  * Deal with spaces in paths. (Jelmer Vernooij)

  * Remove empty directories during fetch. (Jelmer Vernooij)

  * Mark Mercurial 1.6, 1.7 and 1.8 as supported, drop support for earlier versions.
    (#486899, Jelmer Vernooij)

  * Don't warn about development versions of Mercurial. (#492292, Jelmer 
    Vernooij)

  * Cope with unusual characters in changeset ids. (#498945, Jelmer Vernooij)

  * Only mention Mercurial version to use yet. (#517345, Jelmer Vernooij)

  * Only consider major version numbers in compatibility checks.
    (#517343, Jelmer Vernooij)

  * Cope with non-ascii characters in committer names, messages when 
    trying to create delta bases. (Jelmer Vernooij)

  * Fix conversion of symlinks. (#594335, Max Bowser)

  * Don't allow probing for Mercurial repositories over HTTP to break 
    bzr. (Jelmer Vernooij)

  * Fix recursive removing of parent empty directories. (#691994,
    Leonid Borisenko)

  * WorkingTree.commit()'s message argument is now optional, consistent
    with bzr.dev. (#692902, Jelmer Vernooij)

  * Fix handling of unknown strings in converted_from extra. 
    (#670870, Jelmer Vernooij)

  * Fix handling of first revision without changes. (Jelmer Vernooij, #688459)

  * Support stop_revision in Branch.pull(). (Jelmer Vernooij, #544701)

  * Fix crash with KeyError in incremental mirrorring.
    (Leonid Borisenko, Jelmer Vernooij, #692901)

  * Provide custom ControlDir.sprout() implementation. Required for
    compatibility with bzr 2.4. (Jelmer Vernooij, #717937)

  * Tags are copied during cloning and fetching. (Jelmer Vernooij, #660790, #716687)

  * Provide custom InterBranch.fetch() which works for remote hg branches.
    (Jelmer Vernooij, #741760)

  * Properly lock tree when reading tags during fetch.
    (Jelmer Vernooij, #793812)

 DOCUMENTATION

  * Add some basic instructions in INSTALL. (Martin Pool)

0.1.0		2009-09-24

 Initial release.